src/sghi/mentorship_xls_forms/lib/antlr4/generated/SGHI_XLSFormParser.py
# Generated from SGHI-XLSForms/SGHI_XLSForm.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SGHI_XLSFormParser ( Parser ):

    grammarFileName = "SGHI_XLSForm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'%'", "<INVALID>", "'#'", "<INVALID>", "','", "';'", 
                     "<INVALID>", "'then'", "'and'", "'='", "<INVALID>", 
                     "'>'", "<INVALID>", "'<'", "'or'", "'-'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "CEE_SCORE", "DIGITS", "PERCENT", 
                      "QUESTION", "SELECTION", "WHITESPACE", "COMMA", "SEMI", 
                      "IF", "THEN", "AND", "EQUAL", "GE", "GT", "LE", "LT", 
                      "OR", "RANGE" ]

    RULE_scoring_logic = 0
    RULE_skip_logic = 1
    RULE_if_bool_literal_equals_score = 2
    RULE_if_bool_literal_then_question = 3
    RULE_if_count_equals_score = 4
    RULE_if_count_then_question = 5
    RULE_if_comparison_equals_score = 6
    RULE_if_comparison_then_question = 7
    RULE_if_range_equals_score = 8
    RULE_if_selection_equals_score = 9
    RULE_range_expression = 10
    RULE_comparison_expression = 11
    RULE_selection_expression = 12

    ruleNames =  [ "scoring_logic", "skip_logic", "if_bool_literal_equals_score", 
                   "if_bool_literal_then_question", "if_count_equals_score", 
                   "if_count_then_question", "if_comparison_equals_score", 
                   "if_comparison_then_question", "if_range_equals_score", 
                   "if_selection_equals_score", "range_expression", "comparison_expression", 
                   "selection_expression" ]

    EOF = Token.EOF
    BOOLEAN=1
    CEE_SCORE=2
    DIGITS=3
    PERCENT=4
    QUESTION=5
    SELECTION=6
    WHITESPACE=7
    COMMA=8
    SEMI=9
    IF=10
    THEN=11
    AND=12
    EQUAL=13
    GE=14
    GT=15
    LE=16
    LT=17
    OR=18
    RANGE=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Scoring_logicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_bool_literal_equals_score(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_bool_literal_equals_scoreContext,0)


        def if_count_equals_score(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_count_equals_scoreContext,0)


        def if_comparison_equals_score(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_comparison_equals_scoreContext,0)


        def if_range_equals_score(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_range_equals_scoreContext,0)


        def if_selection_equals_score(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_selection_equals_scoreContext,0)


        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_scoring_logic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScoring_logic" ):
                listener.enterScoring_logic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScoring_logic" ):
                listener.exitScoring_logic(self)




    def scoring_logic(self):

        localctx = SGHI_XLSFormParser.Scoring_logicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_scoring_logic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 26
                self.if_bool_literal_equals_score()
                pass

            elif la_ == 2:
                self.state = 27
                self.if_count_equals_score()
                pass

            elif la_ == 3:
                self.state = 28
                self.if_comparison_equals_score()
                pass

            elif la_ == 4:
                self.state = 29
                self.if_range_equals_score()
                pass

            elif la_ == 5:
                self.state = 30
                self.if_selection_equals_score()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Skip_logicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_bool_literal_then_question(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_bool_literal_then_questionContext,0)


        def if_count_then_question(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_count_then_questionContext,0)


        def if_comparison_then_question(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.If_comparison_then_questionContext,0)


        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_skip_logic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip_logic" ):
                listener.enterSkip_logic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip_logic" ):
                listener.exitSkip_logic(self)




    def skip_logic(self):

        localctx = SGHI_XLSFormParser.Skip_logicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_skip_logic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 33
                self.if_bool_literal_then_question()
                pass

            elif la_ == 2:
                self.state = 34
                self.if_count_then_question()
                pass

            elif la_ == 3:
                self.state = 35
                self.if_comparison_then_question()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_bool_literal_equals_scoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def BOOLEAN(self):
            return self.getToken(SGHI_XLSFormParser.BOOLEAN, 0)

        def EQUAL(self):
            return self.getToken(SGHI_XLSFormParser.EQUAL, 0)

        def CEE_SCORE(self):
            return self.getToken(SGHI_XLSFormParser.CEE_SCORE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_bool_literal_equals_score

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_bool_literal_equals_score" ):
                listener.enterIf_bool_literal_equals_score(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_bool_literal_equals_score" ):
                listener.exitIf_bool_literal_equals_score(self)




    def if_bool_literal_equals_score(self):

        localctx = SGHI_XLSFormParser.If_bool_literal_equals_scoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_if_bool_literal_equals_score)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(SGHI_XLSFormParser.IF)
            self.state = 39
            self.match(SGHI_XLSFormParser.BOOLEAN)
            self.state = 40
            self.match(SGHI_XLSFormParser.EQUAL)
            self.state = 41
            self.match(SGHI_XLSFormParser.CEE_SCORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_bool_literal_then_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def BOOLEAN(self):
            return self.getToken(SGHI_XLSFormParser.BOOLEAN, 0)

        def COMMA(self):
            return self.getToken(SGHI_XLSFormParser.COMMA, 0)

        def THEN(self):
            return self.getToken(SGHI_XLSFormParser.THEN, 0)

        def QUESTION(self):
            return self.getToken(SGHI_XLSFormParser.QUESTION, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_bool_literal_then_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_bool_literal_then_question" ):
                listener.enterIf_bool_literal_then_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_bool_literal_then_question" ):
                listener.exitIf_bool_literal_then_question(self)




    def if_bool_literal_then_question(self):

        localctx = SGHI_XLSFormParser.If_bool_literal_then_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_bool_literal_then_question)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(SGHI_XLSFormParser.IF)
            self.state = 44
            self.match(SGHI_XLSFormParser.BOOLEAN)
            self.state = 45
            self.match(SGHI_XLSFormParser.COMMA)
            self.state = 46
            self.match(SGHI_XLSFormParser.THEN)
            self.state = 47
            self.match(SGHI_XLSFormParser.QUESTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_count_equals_scoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def DIGITS(self):
            return self.getToken(SGHI_XLSFormParser.DIGITS, 0)

        def EQUAL(self):
            return self.getToken(SGHI_XLSFormParser.EQUAL, 0)

        def CEE_SCORE(self):
            return self.getToken(SGHI_XLSFormParser.CEE_SCORE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_count_equals_score

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_count_equals_score" ):
                listener.enterIf_count_equals_score(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_count_equals_score" ):
                listener.exitIf_count_equals_score(self)




    def if_count_equals_score(self):

        localctx = SGHI_XLSFormParser.If_count_equals_scoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_count_equals_score)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SGHI_XLSFormParser.IF)
            self.state = 50
            self.match(SGHI_XLSFormParser.DIGITS)
            self.state = 51
            self.match(SGHI_XLSFormParser.EQUAL)
            self.state = 52
            self.match(SGHI_XLSFormParser.CEE_SCORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_count_then_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def DIGITS(self):
            return self.getToken(SGHI_XLSFormParser.DIGITS, 0)

        def COMMA(self):
            return self.getToken(SGHI_XLSFormParser.COMMA, 0)

        def THEN(self):
            return self.getToken(SGHI_XLSFormParser.THEN, 0)

        def QUESTION(self):
            return self.getToken(SGHI_XLSFormParser.QUESTION, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_count_then_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_count_then_question" ):
                listener.enterIf_count_then_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_count_then_question" ):
                listener.exitIf_count_then_question(self)




    def if_count_then_question(self):

        localctx = SGHI_XLSFormParser.If_count_then_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_count_then_question)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SGHI_XLSFormParser.IF)
            self.state = 55
            self.match(SGHI_XLSFormParser.DIGITS)
            self.state = 56
            self.match(SGHI_XLSFormParser.COMMA)
            self.state = 57
            self.match(SGHI_XLSFormParser.THEN)
            self.state = 58
            self.match(SGHI_XLSFormParser.QUESTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_comparison_equals_scoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def comparison_expression(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.Comparison_expressionContext,0)


        def EQUAL(self):
            return self.getToken(SGHI_XLSFormParser.EQUAL, 0)

        def CEE_SCORE(self):
            return self.getToken(SGHI_XLSFormParser.CEE_SCORE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_comparison_equals_score

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_comparison_equals_score" ):
                listener.enterIf_comparison_equals_score(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_comparison_equals_score" ):
                listener.exitIf_comparison_equals_score(self)




    def if_comparison_equals_score(self):

        localctx = SGHI_XLSFormParser.If_comparison_equals_scoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_comparison_equals_score)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SGHI_XLSFormParser.IF)
            self.state = 61
            self.comparison_expression(0)
            self.state = 62
            self.match(SGHI_XLSFormParser.EQUAL)
            self.state = 63
            self.match(SGHI_XLSFormParser.CEE_SCORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_comparison_then_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def comparison_expression(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.Comparison_expressionContext,0)


        def COMMA(self):
            return self.getToken(SGHI_XLSFormParser.COMMA, 0)

        def THEN(self):
            return self.getToken(SGHI_XLSFormParser.THEN, 0)

        def QUESTION(self):
            return self.getToken(SGHI_XLSFormParser.QUESTION, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_comparison_then_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_comparison_then_question" ):
                listener.enterIf_comparison_then_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_comparison_then_question" ):
                listener.exitIf_comparison_then_question(self)




    def if_comparison_then_question(self):

        localctx = SGHI_XLSFormParser.If_comparison_then_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_comparison_then_question)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SGHI_XLSFormParser.IF)
            self.state = 66
            self.comparison_expression(0)
            self.state = 67
            self.match(SGHI_XLSFormParser.COMMA)
            self.state = 68
            self.match(SGHI_XLSFormParser.THEN)
            self.state = 69
            self.match(SGHI_XLSFormParser.QUESTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_range_equals_scoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def range_expression(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.Range_expressionContext,0)


        def EQUAL(self):
            return self.getToken(SGHI_XLSFormParser.EQUAL, 0)

        def CEE_SCORE(self):
            return self.getToken(SGHI_XLSFormParser.CEE_SCORE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_range_equals_score

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_range_equals_score" ):
                listener.enterIf_range_equals_score(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_range_equals_score" ):
                listener.exitIf_range_equals_score(self)




    def if_range_equals_score(self):

        localctx = SGHI_XLSFormParser.If_range_equals_scoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_if_range_equals_score)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(SGHI_XLSFormParser.IF)
            self.state = 72
            self.range_expression()
            self.state = 73
            self.match(SGHI_XLSFormParser.EQUAL)
            self.state = 74
            self.match(SGHI_XLSFormParser.CEE_SCORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_selection_equals_scoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SGHI_XLSFormParser.IF, 0)

        def selection_expression(self):
            return self.getTypedRuleContext(SGHI_XLSFormParser.Selection_expressionContext,0)


        def EQUAL(self):
            return self.getToken(SGHI_XLSFormParser.EQUAL, 0)

        def CEE_SCORE(self):
            return self.getToken(SGHI_XLSFormParser.CEE_SCORE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_if_selection_equals_score

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_selection_equals_score" ):
                listener.enterIf_selection_equals_score(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_selection_equals_score" ):
                listener.exitIf_selection_equals_score(self)




    def if_selection_equals_score(self):

        localctx = SGHI_XLSFormParser.If_selection_equals_scoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_selection_equals_score)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SGHI_XLSFormParser.IF)
            self.state = 77
            self.selection_expression(0)
            self.state = 78
            self.match(SGHI_XLSFormParser.EQUAL)
            self.state = 79
            self.match(SGHI_XLSFormParser.CEE_SCORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Range_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(SGHI_XLSFormParser.DIGITS)
            else:
                return self.getToken(SGHI_XLSFormParser.DIGITS, i)

        def RANGE(self):
            return self.getToken(SGHI_XLSFormParser.RANGE, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_range_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange_expression" ):
                listener.enterRange_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange_expression" ):
                listener.exitRange_expression(self)




    def range_expression(self):

        localctx = SGHI_XLSFormParser.Range_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_range_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SGHI_XLSFormParser.DIGITS)
            self.state = 82
            self.match(SGHI_XLSFormParser.RANGE)
            self.state = 83
            self.match(SGHI_XLSFormParser.DIGITS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self):
            return self.getToken(SGHI_XLSFormParser.DIGITS, 0)

        def GE(self):
            return self.getToken(SGHI_XLSFormParser.GE, 0)

        def GT(self):
            return self.getToken(SGHI_XLSFormParser.GT, 0)

        def LE(self):
            return self.getToken(SGHI_XLSFormParser.LE, 0)

        def LT(self):
            return self.getToken(SGHI_XLSFormParser.LT, 0)

        def PERCENT(self):
            return self.getToken(SGHI_XLSFormParser.PERCENT, 0)

        def comparison_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SGHI_XLSFormParser.Comparison_expressionContext)
            else:
                return self.getTypedRuleContext(SGHI_XLSFormParser.Comparison_expressionContext,i)


        def AND(self):
            return self.getToken(SGHI_XLSFormParser.AND, 0)

        def OR(self):
            return self.getToken(SGHI_XLSFormParser.OR, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_comparison_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_expression" ):
                listener.enterComparison_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_expression" ):
                listener.exitComparison_expression(self)



    def comparison_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SGHI_XLSFormParser.Comparison_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_comparison_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 87
            self.match(SGHI_XLSFormParser.DIGITS)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 88
                self.match(SGHI_XLSFormParser.PERCENT)


            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SGHI_XLSFormParser.Comparison_expressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comparison_expression)
                    self.state = 91
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 92
                    _la = self._input.LA(1)
                    if not(_la==12 or _la==18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 93
                    self.comparison_expression(3) 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Selection_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECTION(self):
            return self.getToken(SGHI_XLSFormParser.SELECTION, 0)

        def DIGITS(self):
            return self.getToken(SGHI_XLSFormParser.DIGITS, 0)

        def selection_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SGHI_XLSFormParser.Selection_expressionContext)
            else:
                return self.getTypedRuleContext(SGHI_XLSFormParser.Selection_expressionContext,i)


        def OR(self):
            return self.getToken(SGHI_XLSFormParser.OR, 0)

        def getRuleIndex(self):
            return SGHI_XLSFormParser.RULE_selection_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelection_expression" ):
                listener.enterSelection_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelection_expression" ):
                listener.exitSelection_expression(self)



    def selection_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SGHI_XLSFormParser.Selection_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_selection_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SGHI_XLSFormParser.SELECTION)
            self.state = 101
            self.match(SGHI_XLSFormParser.DIGITS)
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SGHI_XLSFormParser.Selection_expressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_selection_expression)
                    self.state = 103
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 104
                    self.match(SGHI_XLSFormParser.OR)
                    self.state = 105
                    self.selection_expression(3) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[11] = self.comparison_expression_sempred
        self._predicates[12] = self.selection_expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def comparison_expression_sempred(self, localctx:Comparison_expressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def selection_expression_sempred(self, localctx:Selection_expressionContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




